AWS/hpo_deployment_alb_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpo-deployment
  namespace: hpo
  #labels:
    #app: hpo_test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hpo_test
  template:
    metadata:
      labels:
        app: hpo_test
    spec:
      containers:
      - name: hpotestcontainer
        image: 244857349068.dkr.ecr.ap-east-1.amazonaws.com/hpoanalysis:2.0
        ports:
        - containerPort: 8051
---
apiVersion: v1
kind: Service
metadata:
  name: hpo-cluster-service
  namespace: hpo
spec:
  type: NodePort
  selector:
    app: hpo_test
  ports:
    - port: 8051
      targetPort: 8051
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpo-ingress
  namespace: hpo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: hpo-k8s-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/tags: Environment=dev, Creator=mfyhung
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-east-1:244857349068:certificate/e67dc8b9-572e-4339-9f04-df29cd8861c2
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-Res-2020-10
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
spec:
  rules:
    - host: k8s.dev.hkgenome.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hpo-cluster-service
                port:
                  number: 8051
